--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "three": "^0.182.0",
     "typescript": "^5.9.3",
     "zustand": "^5.0.10"
