--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,13 +15,14 @@ dependencies = [
     "numpy>=1.26.0",
     "websockets>=13.0",
     "torch>=2.0.0",
+    "httpx>=0.27.0",
+    "matplotlib>=3.8.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.24.0",
-    "httpx>=0.27.0",
     "ruff>=0.8.0",
     "aiosqlite>=0.20.0",
 ]
